Navbar usermenu, preventing scrollbar width change

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -51,11 +51,13 @@
 
 @layer components {
   .scrollbar-thin::-webkit-scrollbar {
-    width: 4px;
+    width: 6px;
+    background-color: rgb(255, 255, 255, 0);
   }
    
   .scrollbar-primary::-webkit-scrollbar-thumb {
-    background: hsl(25, 95%, 53%);
+    background: rgb(155, 155, 155);
+    border-radius: 4px;
   }
 }
 
